fix list spacing

--- a/style.css
+++ b/style.css
@@ -272,6 +272,10 @@ form > hr {
   display: none;
 }
 
+#all-articles-list {
+  display: block;
+}
+
 @media screen and (max-width: 576px) {
   body {
     margin: 0;
